@@ -176,7 +176,7 @@ public class TableNameRegistryStore extends GrowOnlyTableNameRegistryStore {
 
         try {
             if (ff.read(seqMetaFd, longBuffer, Long.BYTES, SEQ_META_OFFSET_STRUCTURE_VERSION) == Long.BYTES) {
-                long structureVersion = Unsafe.getUnsafe().getLong(longBuffer);
+                long structureVersion = Unsafe.getLong(longBuffer);
                 return structureVersion == DROP_TABLE_STRUCTURE_VERSION;
             } else {
                 LOG.error().$("cannot read structure version, assume table is being dropped [path=").$(path).I$();
@@ -434,7 +434,7 @@ public class TableNameRegistryStore extends GrowOnlyTableNameRegistryStore {
                 memory.smallFile(ff, path.$(), MemoryTag.MMAP_DEFAULT);
                 LOG.info()
                         .$("reloading tables file [path=").$(path)
-                        .$(", threadId=").$(Thread.currentThread().getId())
+                        .$(", threadId=").$(Thread.currentThread().threadId())
                         .I$();
                 if (memory.size() >= 2 * Long.BYTES) {
                     break;
@@ -474,7 +474,21 @@ public class TableNameRegistryStore extends GrowOnlyTableNameRegistryStore {
             currentOffset += Integer.BYTES;
 
             if (operation == OPERATION_REMOVE) {
-                TableToken token = tableNameToTableTokenMap.remove(tableName);
+                // Release the logical name only if it still resolves to THIS dropped dir. A table rebase
+                // (ALTER TABLE ... REBASE WAL) logs DROP(oldDir) before ADD(newDir) under the SAME logical
+                // name (rebaseWalTable0 calls dropTable then registerName). A clean full replay therefore
+                // sees DROP(oldDir) while the name still maps to oldDir and releases it correctly; but if a
+                // reload observes the name already repointed to a different live dir (records split across an
+                // incremental reload, or a recreate under the same name), an unconditional remove(tableName)
+                // here would clobber that live dir's mapping and leave the forward/reverse maps inconsistent
+                // (reloadFromRootDirectory then skips the dir because it is already in the reverse map, so
+                // the name is never restored).
+                TableToken token = tableNameToTableTokenMap.get(tableName);
+                if (token != null && Chars.equals(token.getDirName(), dirName)) {
+                    tableNameToTableTokenMap.remove(tableName);
+                } else {
+                    token = null;
+                }
                 if (!ff.exists(path.trimTo(plimit).concat(dirName).$())) {
                     // table already fully removed
                     tableToCompact++;
